# GB-EMU

./: CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_ES.md  LICENSE  README.md  README_ES.md  build.sh  emc_main.cpp  index.js  index.wasm  main.cpp
.github/workflows/: main.yml
build_web/: CMakeCache.txt  Makefile  cmake_install.cmake  gb-emu.data  gb-emu.html  gb-emu.js  gb-emu.wasm
core/: cpu.cpp
core/cartridge/: cartridge.cpp  cartridge.h
core/cartridge/IMBC/: IMBC.h
core/cartridge/IMBC/type_cartridge/: MBC1.cpp  MBC1.h  MBC3.cpp  MBC3.h  RomOnly.cpp  RomOnly.h
core/cpu/: cpu.cpp  cpu.h
core/cpu/APU/: apu.cpp  apu.h
core/cpu/instructions/: intructions.h
core/cpu/mmu/: mmu.cpp  mmu.h
core/cpu/ppu/: ppu.cpp  ppu.h
core/cpu/timer/: timer.cpp  timer.h
src/: index.html
